fixed navbar alignment mobile response

--- a/src/sections/navbar/navbar.css
+++ b/src/sections/navbar/navbar.css
@@ -317,7 +317,8 @@ nav {
   }
 
   .navbar {
-    padding: 0 20px;
+    padding: 0 5px;
+    width: 100%;
   }
   .container.nav__container {
     vertical-align: middle;
